added Enemy, and also turned on collision between player and enemy

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div id="phaser-game"></div>
     <script src="public/scripts/phaser.min.js" charset="utf-8"></script>
+    <script src="public/classes/Enemy.js" charset="utf-8"></script>
     <script src="public/classes/Player.js" charset="utf-8"></script>
     <script src="public/classes/UiButton.js" charset="utf-8"></script>
     <script src="public/scripts/BootScene.js" charset="utf-8"></script>
