add phaser-matter collision

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0"
     />
+
   </head>
   <body>
     <div id="phaser-game"></div>
+    <script src="http://cdn.jsdelivr.net/npm/phaser-matter-collision-plugin"></script>
     <script src="public/scripts/phaser.min.js" charset="utf-8"></script>
     <script src="public/classes/Player.js" charset="utf-8"></script>
     <script src="public/classes/UiButton.js" charset="utf-8"></script>
