adding character sprite data, also moved the phaser lib files

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div id="phaser-game"></div>
-    <script src="public/scripts/phaser.min.js" charset="utf-8"></script>
-    <script src="public/scripts/phaser-matter-collision-plugin.min.js"></script>
+    <script src="public/lib/phaser.min.js" charset="utf-8"></script>
+    <script src="public/lib/phaser-matter-collision-plugin.min.js"></script>
     <script src="public/classes/Enemy.js" charset="utf-8"></script>
     <script src="public/classes/Player.js" charset="utf-8"></script>
     <script src="public/classes/UiButton.js" charset="utf-8"></script>
