--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="public/lib/phaser-matter-collision-plugin.min.js"></script>
     <script src="public/classes/Enemy.js" charset="utf-8"></script>
     <script src="public/classes/Player.js" charset="utf-8"></script>
+    <script src="public/classes/NPC.js" charset="utf-8"></script>
     <script src="public/classes/UiButton.js" charset="utf-8"></script>
     <script src="public/scripts/BootScene.js" charset="utf-8"></script>
     <script src="public/scripts/TitleScene.js" charset="utf-8"></script>
