add createbattle and battle scene js

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="public/classes/UiButton.js" charset="utf-8"></script>
     <script src="public/scripts/BootScene.js" charset="utf-8"></script>
     <script src="public/scripts/TitleScene.js" charset="utf-8"></script>
+    <script src="public/scripts/BattleScene.js" charset="utf-8"></script>
     <script src="public/scripts/GameScene.js" charset="utf-8"></script>
     <script src="public/scripts/UiScene.js" charset="utf-8"></script>
     <script src="public/game.js" charset="utf-8"></script>
