dialog text overlay showing

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <title>PIXEL SOULS</title>
     <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0"
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0"
     />
   </head>
   <body>
@@ -18,6 +18,7 @@
     <script src="public/classes/UiButton.js" charset="utf-8"></script>
     <script src="public/scripts/BootScene.js" charset="utf-8"></script>
     <script src="public/scripts/TitleScene.js" charset="utf-8"></script>
+    <script src="public/scripts/DialogScene.js" charset="utf-8"></script>
     <script src="public/scripts/BattleScene.js" charset="utf-8"></script>
     <script src="public/scripts/GameScene.js" charset="utf-8"></script>
     <script src="public/scripts/UiScene.js" charset="utf-8"></script>
