add external font

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0"
     />
+    <link rel="stylesheet" href="font.css" />
   </head>
   <body>
-    <div id="phaser-game"></div>
+    <div style="font-family: HonokaMincho" id="phaser-game"></div>
     <script src="public/lib/phaser.min.js" charset="utf-8"></script>
     <script src="public/lib/phaser-matter-collision-plugin.min.js"></script>
     <script src="public/classes/Enemy.js" charset="utf-8"></script>
