--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="public/classes/Player.js" charset="utf-8"></script>
     <script src="public/classes/NPC.js" charset="utf-8"></script>
     <script src="public/classes/Entity.js" charset="utf-8"></script>
+    <script src="public/classes/Item.js" charset="utf-8"></script>
     <script src="public/classes/UiButton.js" charset="utf-8"></script>
     <script src="public/classes/Bonfire.js" charset="utf-8"></script>
     <script src="public/scripts/BootScene.js" charset="utf-8"></script>
