EventListener logic updated

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="public/scripts/BattleScene.js" charset="utf-8"></script>
     <script src="public/scripts/GameScene.js" charset="utf-8"></script>
     <script src="public/scripts/UiScene.js" charset="utf-8"></script>
+    <script src="public/scripts/EventsManager.js" charset="utf-8"></script>
     <script src="public/game.js" charset="utf-8"></script>
   </body>
 </html>
