add dialogue timer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="font.css" />
   </head>
   <body>
-    <div style="font-family: HonokaMincho" id="phaser-game"></div>
+    <div id="phaser-game"></div>
     <script src="public/lib/phaser.min.js" charset="utf-8"></script>
     <script src="public/lib/phaser-matter-collision-plugin.min.js"></script>
     <script src="public/classes/Enemy.js" charset="utf-8"></script>
