Removed extra libraries

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <div id="phaser-game"></div>
-    <script src="public/lib/phaser.min.js" charset="utf-8"></script>
-    <script src="public/lib/phaser-matter-collision-plugin.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser-matter-collision-plugin"></script>
     <script src="public/classes/Enemy.js" charset="utf-8"></script>
     <script src="public/classes/Player.js" charset="utf-8"></script>
     <script src="public/classes/NPC.js" charset="utf-8"></script>
