fix fonts are not loaded immediately, all the dialogs show correct fonts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0"
     />
     <link rel="stylesheet" href="font.css" />
+    <link
+      rel="preload"
+      as="font"
+      href="public/assets/font/font_1_honokamin.ttf"
+      type="font/ttf"
+    />
+    <link
+      rel="preload"
+      as="font"
+      href="public/assets/font/titleFont.ttf"
+      type="font/ttf"
+    />
   </head>
   <body>
     <div id="phaser-game"></div>
