--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="public/scripts/GameScene.js" charset="utf-8"></script>
     <script src="public/scripts/TitleScene.js" charset="utf-8"></script>
     <script src="public/scripts/DialogScene.js" charset="utf-8"></script>
+    <script src="public/scripts/Preloader.js" charset="utf-8"></script>
     <script src="public/scripts/DeathScene.js" charset="utf-8"></script>
     <script src="public/scripts/CombatScene.js" charset="utf-8"></script>
     <script src="public/scripts/UiScene.js" charset="utf-8"></script>
