Well Class added for interactive easter egg

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="./public/classes/Item.js" charset="utf-8"></script>
     <script src="./public/classes/UiButton.js" charset="utf-8"></script>
     <script src="./public/classes/Bonfire.js" charset="utf-8"></script>
+    <script src="./public/classes/Well.js" charset="utf-8"></script>
     <script src="./public/scripts/BootScene.js" charset="utf-8"></script>
     <script src="./public/scripts/GameScene.js" charset="utf-8"></script>
     <script src="./public/scripts/TitleScene.js" charset="utf-8"></script>
