Event trigger logic added for boss scene

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="./public/classes/Player.js" charset="utf-8"></script>
     <script src="./public/classes/NPC.js" charset="utf-8"></script>
     <script src="./public/classes/Entity.js" charset="utf-8"></script>
+    <script src="./public/classes/EventTrigger.js" charset="utf-8"></script>
     <script src="./public/classes/Item.js" charset="utf-8"></script>
     <script src="./public/classes/UiButton.js" charset="utf-8"></script>
     <script src="./public/classes/Bonfire.js" charset="utf-8"></script>
