--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="./public/scripts/DialogScene.js" charset="utf-8"></script>
     <script src="./public/scripts/DeathScene.js" charset="utf-8"></script>
     <script src="./public/scripts/CombatScene.js" charset="utf-8"></script>
+    <script src="./public/scripts/BossScene.js" charset="utf-8"></script>
     <script src="./public/scripts/UiScene.js" charset="utf-8"></script>
     <script src="./public/scripts/AudioScene.js" charset="utf-8"></script>
     <script src="./public/scripts/LoadingScene.js" charset="utf-8"></script>
