added new UN-USED Boss class, trying to get battle transition to work first

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser-matter-collision-plugin"></script>
     <script src="./public/classes/Enemy.js" charset="utf-8"></script>
+    <script src="./public/classes/Boss.js" charset="utf-8"></script>
     <script src="./public/classes/Player.js" charset="utf-8"></script>
     <script src="./public/classes/NPC.js" charset="utf-8"></script>
     <script src="./public/classes/Entity.js" charset="utf-8"></script>
